force-app/main/default/objects/VN_MetasParticipantes__c/VN_MetasParticipantes__c.object-meta.xml
<CustomObject>
    <description>Cadastro de metas mês a mês do ano fiscal dos participantes.</description>
    <label>Meta do Participante - OLD</label>
    <nameField>
        <label>Ano Fiscal</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Metas dos Participantes - OLD</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>