force-app/main/default/objects/VN_MetasParticipantes__c/fields/V_AMAteDecimoMesAFPonderado__c.field-meta.xml
<CustomField>
    <fullName>V_AMAteDecimoMesAFPonderado__c</fullName>
    <description>Percentual de atingimento de metas PONDERADO do participante até o 10o. mês do ano fiscal. Cálculo utilizado no Elite.</description>
    <inlineHelpText>Percentual de atingimento de metas PONDERADO do participante até o 10o. mês do ano fiscal. Cálculo utilizado no Elite.</inlineHelpText>
    <label>AM Até Mês 1 - Ponderado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>