force-app/main/default/objects/VN_MetasParticipantes__c/fields/V_AMAteDecimoSegundoMesAFPonderado__c.field-meta.xml
<CustomField>
    <fullName>V_AMAteDecimoSegundoMesAFPonderado__c</fullName>
    <description>Percentual de atingimento de metas PONDERADO do participante até o 12o. mês do ano fiscal. Cálculo utilizado no Elite.</description>
    <inlineHelpText>Percentual de atingimento de metas PONDERADO do participante até o 12o. mês do ano fiscal. Cálculo utilizado no Elite.</inlineHelpText>
    <label>AM Até Mês 3 - Ponderado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>