force-app/main/default/objects/VN_MetasParticipantes__c/fields/V_AMAteQuartoMesAFPonderado__c.field-meta.xml
<CustomField>
    <fullName>V_AMAteQuartoMesAFPonderado__c</fullName>
    <description>Atingimento de metas PONDERADO do participante até o 4o. mês do ano fiscal. Cálculo utilizado no Elite.</description>
    <inlineHelpText>Atingimento de metas PONDERADO do participante até o 4o. mês do ano fiscal. Cálculo utilizado no Elite.</inlineHelpText>
    <label>AM Até Mês 7 - Ponderado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>