force-app/main/default/objects/VN_MetasParticipantes__c/fields/V_AMAteSextoMesAFPonderado__c.field-meta.xml
<CustomField>
    <fullName>V_AMAteSextoMesAFPonderado__c</fullName>
    <description>Atingimento de metas PONDERADO do participante até o 6o. mês do ano fiscal. Cálculo utilizado no Elite.</description>
    <inlineHelpText>Atingimento de metas PONDERADO do participante até o 6o. mês do ano fiscal. Cálculo utilizado no Elite.</inlineHelpText>
    <label>AM Até Mês 9 - Ponderado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>