force-app/main/default/objects/VN_MetasParticipantes__c/fields/V_AMH1Ponderado__c.field-meta.xml
<CustomField>
    <fullName>V_AMH1Ponderado__c</fullName>
    <label>AM H1 - Ponderado</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>