force-app/main/default/objects/VN_MetasParticipantes__c/fields/V_AMProjPondAteSetimoMes__c.field-meta.xml
<CustomField>
    <fullName>V_AMProjPondAteSetimoMes__c</fullName>
    <description>Percentual de atingimento de metas Projetado PONDERADO do participante até o 7o. mês do ano fiscal. Cálculo utilizado no Elite.</description>
    <inlineHelpText>Percentual de atingimento de metas Projetado PONDERADO do participante até o 7o. mês do ano fiscal. Cálculo utilizado no Elite.</inlineHelpText>
    <label>AM Até Mês 10 Projetado - Ponderado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>