force-app/main/default/objects/VN_MetasParticipantes__c/fields/V_AMProjPondAteSextoMes__c.field-meta.xml
<CustomField>
    <fullName>V_AMProjPondAteSextoMes__c</fullName>
    <description>Percentual de atingimento de metas Projetado PONDERADO do participante até o 6o. mês do ano fiscal. Cálculo utilizado no Elite.</description>
    <inlineHelpText>Percentual de atingimento de metas Projetado PONDERADO do participante até o 6o. mês do ano fiscal. Cálculo utilizado no Elite.</inlineHelpText>
    <label>AM Até Mês 9 Projetado - Ponderado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>