force-app/main/default/objects/VN_MetasParticipantes__c/fields/V_AMTrimestre3Ponderado__c.field-meta.xml
<CustomField>
    <fullName>V_AMTrimestre3Ponderado__c</fullName>
    <label>AM trimestre 3 - ponderado</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>