force-app/main/default/objects/VN_MetasParticipantes__c/fields/V_AnoFiscalConcluido__c.field-meta.xml
<CustomField>
    <fullName>V_AnoFiscalConcluido__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo atualizado por batch após a conclusão da carga de vendas do último mês do ano fiscal. Esse campo será utilizado para o cálculo da elegibilidade anual do Elite.</description>
    <inlineHelpText>Campo atualizado por batch após a conclusão da carga de vendas do último mês do ano fiscal. Esse campo será utilizado para o cálculo da elegibilidade anual do Elite.</inlineHelpText>
    <label>Ano Fiscal Concluído?</label>
    <type>Checkbox</type>
</CustomField>