force-app/main/default/objects/VN_MetasParticipantes__c/fields/V_BUAtingidasAF__c.field-meta.xml
<CustomField>
    <fullName>V_BUAtingidasAF__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Quantidade de BUs que tiveram atingimento de metas no ano fiscal. Campo a ser preenchido por carga de dados.</description>
    <inlineHelpText>Quantidade de BUs que tiveram atingimento de metas no ano fiscal.</inlineHelpText>
    <label>BUs Atingidas - AF</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>