force-app/main/default/objects/VN_MetasParticipantes__c/fields/V_BUAtingidasAteQuintoMesAF__c.field-meta.xml
<CustomField>
    <fullName>V_BUAtingidasAteQuintoMesAF__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Quantidade de BUs que tiveram atingimento de metas até o 5o. mês do ano fiscal. Campo a ser preenchido por carga de dados.</description>
    <inlineHelpText>Quantidade de BUs que tiveram atingimento de metas até o 5o. mês do ano fiscal.</inlineHelpText>
    <label>BUs Atingidas Até Mês 8</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>