force-app/main/default/objects/VN_MetasParticipantes__c/fields/V_CargoPersona__c.field-meta.xml
<CustomField>
    <fullName>V_CargoPersona__c</fullName>
    <description>Verifica o perfil para persona conforme cargo do Participante.</description>
    <formula>IF(ISPICKVAL(V_Participante__r.V_Cargo__c, &apos;LÍDER&apos;),&apos;Lid&apos;,IF(ISPICKVAL(V_Participante__r.V_Cargo__c, &apos;COORDENADOR | GERENTE REGIONAL VIP&apos;),&apos;C/GR&apos;,IF(ISPICKVAL(V_Participante__r.V_Cargo__c, &apos;GERENTE DE CONTAS&apos;),&apos;GC&apos;,IF(ISPICKVAL(V_Participante__r.V_Cargo__c, &apos;DIRETOR&apos;),&apos;DIR&apos;,&apos;&apos;))))</formula>
    <label>Cargo Persona</label>
    <type>Text</type>
</CustomField>