force-app/main/default/objects/VN_MetasParticipantes__c/fields/V_ChaveExclusiva__c.field-meta.xml
<CustomField>
    <fullName>V_ChaveExclusiva__c</fullName>
    <description>Campo atualizado por workflow para evitar duplicidade de registros. Ano Fiscal + Registro participante</description>
    <inlineHelpText>Campo atualizado por workflow para evitar duplicidade de registros. Ano Fiscal + Registro participante</inlineHelpText>
    <label>Chave Exclusiva</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>