force-app/main/default/objects/VN_MetasParticipantes__c/fields/V_ClassificacaoPersonaMes11__c.field-meta.xml
<CustomField>
    <fullName>V_ClassificacaoPersonaMes11__c</fullName>
    <description>Campo preenchido via trigger com a classificação do mês + Cargo persona.</description>
    <label>Classificação Persona Mês 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>