force-app/main/default/objects/VN_MetasParticipantes__c/fields/V_CodParticipante__c.field-meta.xml
<CustomField>
    <fullName>V_CodParticipante__c</fullName>
    <description>Código exclusivo do participante relacionado ao registro do ano fiscal.</description>
    <formula>V_Participante__r.V_RegistroParticipante__c</formula>
    <inlineHelpText>Código exclusivo do participante relacionado ao registro do ano fiscal.</inlineHelpText>
    <label>Cód. Participante</label>
    <type>Text</type>
</CustomField>