force-app/main/default/objects/VN_MetasParticipantes__c/fields/V_DiferencaPercentualAMAteMes10AteMes9__c.field-meta.xml
<CustomField>
    <fullName>V_DiferencaPercentualAMAteMes10AteMes9__c</fullName>
    <description>Diferença de percentual de AM (até Mês 10 menos Até Mês 9). Campo a ser utilizado pela Comunicação.</description>
    <formula>V_PercentualAMAteSetimoMesAF__c - V_PercentualAMAteSextoMesAF__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Diferença de percentual de AM (até Mês 10 menos Até Mês 9). Campo a ser utilizado pela Comunicação.</inlineHelpText>
    <label>Diferença % AM (Até Mês 10 - Até Mês 9)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>