force-app/main/default/objects/VN_MetasParticipantes__c/fields/V_DiferencaPercentualAMAteMes11AteMes10__c.field-meta.xml
<CustomField>
    <fullName>V_DiferencaPercentualAMAteMes11AteMes10__c</fullName>
    <description>Diferença de percentual de AM (até Mês 11 menos Até Mês 10). Campo a ser utilizado pela Comunicação.</description>
    <formula>V_PercentualAMAteOitavoMesAF__c - V_PercentualAMAteSetimoMesAF__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Diferença de percentual de AM (até Mês 11 menos Até Mês 10). Campo a ser utilizado pela Comunicação.</inlineHelpText>
    <label>Diferença % AM (Até Mês 11 - Até Mês 10)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>