force-app/main/default/objects/VN_MetasParticipantes__c/fields/V_DiferencaPercentualAMAteMes12AteMes11__c.field-meta.xml
<CustomField>
    <fullName>V_DiferencaPercentualAMAteMes12AteMes11__c</fullName>
    <description>Diferença de percentual de AM (até Mês 12 menos Até Mês 11). Campo a ser utilizado pela Comunicação.</description>
    <formula>V_PercentualAMAteNonoMesAF__c - V_PercentualAMAteOitavoMesAF__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Diferença de percentual de AM (até Mês 12 menos Até Mês 11). Campo a ser utilizado pela Comunicação.</inlineHelpText>
    <label>Diferença % AM (Até Mês 12 - Até Mês 11)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>