force-app/main/default/objects/VN_MetasParticipantes__c/fields/V_ElegivelAoElite__c.field-meta.xml
<CustomField>
    <fullName>V_ElegivelAoElite__c</fullName>
    <description>Indica se o participante está elegível ao Elite no momento atual.</description>
    <formula>IF( 

CONTAINS(UPPER( V_Participante__r.Name), &apos;TESTE&apos;), FALSE, 

IF( 
AND( 
TEXT(V_Participante__r.V_NovoContratado__c) = &apos;Não&apos;, 
TEXT(V_Participante__r.FieloPLT__Status__c) = &apos;Active&apos;, 
V_PercentualAMAF__c &gt;= 1), TRUE, FALSE 

))</formula>
    <inlineHelpText>Indica se o participante está elegível ao Elite no momento atual.</inlineHelpText>
    <label>Elegível ao Elite?</label>
    <type>Checkbox</type>
</CustomField>