force-app/main/default/objects/VN_MetasParticipantes__c/fields/V_ElegivelParaVagaYTD__c.field-meta.xml
<CustomField>
    <fullName>V_ElegivelParaVagaYTD__c</fullName>
    <description>Verifica se o participante é elegível a viagar</description>
    <formula>IF(V_Participante__r.V_PosicaoRankingYTD__c=0,FALSE,
IF(CASE(TEXT(V_Participante__r.V_Cargo__c), 
            &quot;DIRETOR&quot;, IF(V_Participante__r.V_PosicaoRankingYTD__c&lt;=VALUE($Label.V_VagasDiretor),1,0), 
            &quot;COORDENADOR | GERENTE REGIONAL VIP&quot;, IF(V_Participante__r.V_PosicaoRankingYTD__c&lt;=VALUE($Label.V_VagasCordenador_GerenteRegional),1,0),
            &quot;GERENTE DE CONTAS&quot;, IF(V_Participante__r.V_PosicaoRankingYTD__c&lt;=VALUE($Label.V_VagasGerenteDeContas),1,0),
            &quot;LÍDER&quot;, IF(V_Participante__r.V_PosicaoRankingYTD__c&lt;=VALUE($Label.V_VagasLider),1,0),
     0) = 1, TRUE , FALSE)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Elegível para vaga YTD</label>
    <type>Checkbox</type>
</CustomField>