force-app/main/default/objects/VN_MetasParticipantes__c/fields/V_EmailDinamizeBranco__c.field-meta.xml
<CustomField>
    <fullName>V_EmailDinamizeBranco__c</fullName>
    <description>Campo sem valor apenas para utilização no modo de exibição para o Dinamize.</description>
    <inlineHelpText>Campo sem valor apenas para utilização no modo de exibição para o Dinamize.</inlineHelpText>
    <label>Email Dinamize Em Branco</label>
    <type>Email</type>
</CustomField>