force-app/main/default/objects/VN_MetasParticipantes__c/fields/V_FirstNome__c.field-meta.xml
<CustomField>
    <fullName>V_FirstNome__c</fullName>
    <description>Campo buscando o primeiro nome do Participante.</description>
    <formula>IF( CONTAINS(V_Participante__r.Name, &quot; &quot;), LEFT(V_Participante__r.Name, FIND( &quot; &quot;, V_Participante__r.Name ) -1 ),V_Participante__r.Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Campo buscando o primeiro nome do Participante.</inlineHelpText>
    <label>Primeiro Nome</label>
    <type>Text</type>
</CustomField>