force-app/main/default/objects/VN_MetasParticipantes__c/fields/V_GanhouLeilaoComplementar__c.field-meta.xml
<CustomField>
    <fullName>V_GanhouLeilaoComplementar__c</fullName>
    <description>Indica se o participante ganhou no mínimo 1 leilão extra no ano fiscal.</description>
    <formula>V_LeiloesCompGanhosAF__c &gt;= 1</formula>
    <inlineHelpText>Indica se o participante ganhou no mínimo 1 leilão extra no ano fiscal.</inlineHelpText>
    <label>Ganhou Leilão Extra?</label>
    <type>Checkbox</type>
</CustomField>