force-app/main/default/objects/VN_MetasParticipantes__c/fields/V_GanhouLeilaoPerene__c.field-meta.xml
<CustomField>
    <fullName>V_GanhouLeilaoPerene__c</fullName>
    <description>Indica se o participante ganhou no mínimo 1 leilão perene no ano fiscal.</description>
    <formula>V_LeiloesPerenesGanhosAF__c &gt;=1</formula>
    <inlineHelpText>Indica se o participante ganhou no mínimo 1 leilão perene no ano fiscal.</inlineHelpText>
    <label>Ganhou Leilão Perene?</label>
    <type>Checkbox</type>
</CustomField>