force-app/main/default/objects/VN_MetasParticipantes__c/fields/V_GAPMeta10oMesAFxGAP9oMesAF__c.field-meta.xml
<CustomField>
    <fullName>V_GAPMeta10oMesAFxGAP9oMesAF__c</fullName>
    <description>Indica o comportamento do GAP Meta do mês atual com o do mês anterior.</description>
    <formula>IF(

V_GAPMetaAte10oMesAF__c &gt; V_GAPMetaAte9oMesAFAUX__c, &quot;Aumentou&quot;,

IF(
V_GAPMetaAte10oMesAF__c &lt; V_GAPMetaAte9oMesAFAUX__c, &quot;Diminuiu&quot;, &quot;Sem Alteração&quot;

))</formula>
    <inlineHelpText>Indica o comportamento do GAP Meta do mês atual com o do mês anterior.</inlineHelpText>
    <label>GAP Meta - Mês 1 x Mês 12</label>
    <type>Text</type>
</CustomField>