force-app/main/default/objects/VN_MetasParticipantes__c/fields/V_GAPMeta11oMesAFxGAP10oMesAF__c.field-meta.xml
<CustomField>
    <fullName>V_GAPMeta11oMesAFxGAP10oMesAF__c</fullName>
    <description>Indica o comportamento do GAP Meta do mês atual com o do mês anterior.</description>
    <formula>IF(

V_GAPMetaAte11oMesAFAUX__c &gt; V_GAPMetaAte10oMesAF__c, &quot;Aumentou&quot;,

IF(
V_GAPMetaAte11oMesAFAUX__c &lt; V_GAPMetaAte10oMesAF__c, &quot;Diminuiu&quot;, &quot;Sem Alteração&quot;

))</formula>
    <inlineHelpText>Indica o comportamento do GAP Meta do mês atual com o do mês anterior.</inlineHelpText>
    <label>GAP Meta - Mês 2 x Mês 1</label>
    <type>Text</type>
</CustomField>